2009-02-06  higepon  <higepon@users.sourceforge.jp>

        * Use Derick Eddington's SRFIs.
        (srfi :0 cond-expand)
        (srfi :1 lists)
        (srfi :2 and-let*)
        (srfi :6 basic-string-ports)
        (srfi :8 receive)
        (srfi :9 records)
        (srfi :11 let-values)
        (srfi :13 strings)
        (srfi :14 char-sets)
        (srfi :16 case-lambda)
        (srfi :19 time)
        (srfi :23 error)
        (srfi :26 cut)
        (srfi :27 random-bits)
        (srfi :31 rec)
        (srfi :37 args-fold)
        (srfi :38 with-shared-structure)
        (srfi :39 parameters)
        (srfi :41 streams)
        (srfi :42 eager-comprehensions)
        (srfi :43 vectors)
        (srfi :48 intermediate-format-strings)
        (srfi :61 cond)
        (srfi :67 compare-procedures)
        (srfi :78 lightweight-testing)
        (srfi :98)

        * PortProcedures.cpp : Adde write-char for srfi-48.

        * lib/srfi/sync_mosh.sh: Added for sync.

        * SRFIs: Following SRFIs are tested and installed.
                 0, 1, 8, 9, 11, 13, 14, 16, 19, 23, 39.

        * test/srfi-misc.scm : Added srfi tests.

        * Added : new srfi system.

        * FileBinaryOutputPort.cpp (putByteVector): Added.

        * Fixed : (exact 154) => 154(ratnum) is wrong.

2009-02-05  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryOutputPort.cpp (FileBinaryOutputPort::bufFlush): Added some ASSERTs.

        * lib/srfi/%3A1.ss: Added SRFI-1.

        * Check and remove g++ warnigs.

        * Renamed (srfi :1) to (mosh srfi :1).
                  This is temporary. We will add (srfi :1) library to lib/srfi soon.

        * Added (host-os) and (library-path) to library (mosh).

        * lib/srfi/%3A41.ss: Added SRFI-41.

        * lib/srfi/%3A38.ss: Added SRFI-39.

        * lib/srfi/%3A38.ss: Added SRFI-38.

        * lib/srfi/%3A28.ss: Added SRFI-28.

        * lib/srfi/%3A27.ss: Added SRFI-27 ported from Ypsilon Scheme.
