@@ -70,7 +70,7 @@ Object scheme::utf8TostringEx(VM* theVM, int argc, const Object* argv)
 {
     DeclareProcedureName("utf8->string");
     checkArgumentLength(1);
-    Object transcoder = Object::makeTranscoder(new UTF8Codec());
+    Object transcoder = Object::makeTranscoder(UTF8Codec::getCodec());
     Object args[2];
     args[0] = argv[0];
     args[1] = transcoder;
@@ -81,7 +81,7 @@ Object scheme::stringToutf8Ex(VM* theVM, int argc, const Object* argv)
 {
     DeclareProcedureName("string->utf8");
     checkArgumentLength(1);
-    Object transcoder = Object::makeTranscoder(new UTF8Codec());
+    Object transcoder = Object::makeTranscoder(UTF8Codec::getCodec());
     Object args[2];
     args[0] = argv[0];
     args[1] = transcoder;
@@ -118,9 +118,9 @@ Object scheme::utf32TostringEx(VM* theVM, int argc, const Object* argv)
     const int skipSize = (skipBOM ? 4 : 0);
     BinaryInputPort* in = new ByteArrayBinaryInputPort(bytevector->data() + skipSize, bytevector->length() - skipSize);
     ucs4string ret;
-    UTF32Codec codec(endianness);
+    UTF32Codec* codec = (UTF32Codec*)UTF32Codec::getCodec(endianness);
     TRY_IO {
-        for (ucs4char c = codec.in(in); c != EOF; c = codec.in(in)) {
+        for (ucs4char c = codec->in(in); c != EOF; c = codec->in(in)) {
             ret += c;
         }
         return Object::makeString(ret);
@@ -160,9 +160,9 @@ Object scheme::utf16TostringEx(VM* theVM, int argc, const Object* argv)
     const int skipSize = (skipBOM ? 2 : 0);
     BinaryInputPort* in = new ByteArrayBinaryInputPort(bytevector->data() + skipSize, bytevector->length() - skipSize);
     ucs4string ret;
-    UTF16Codec codec(endianness);
+    UTF16Codec* codec = (UTF16Codec*)UTF16Codec::getCodec(endianness);
     TRY_IO {
-        for (ucs4char c = codec.in(in); c != EOF; c = codec.in(in)) {
+        for (ucs4char c = codec->in(in); c != EOF; c = codec->in(in)) {
             ret += c;
         }
         return Object::makeString(ret);
@@ -181,16 +181,16 @@ Object scheme::stringToutf16Ex(VM* theVM, int argc, const Object* argv)
     if (argc == 2) {
         argumentCheckSymbol(1, endianness);
         if (endianness == Symbol::LITTLE) {
-            args[1] = Object::makeTranscoder(new UTF16Codec(UTF16Codec::UTF_16LE));
+            args[1] = Object::makeTranscoder(UTF16Codec::getCodec(UTF16Codec::UTF_16LE));
         } else if (endianness == Symbol::BIG) {
-            args[1] = Object::makeTranscoder(new UTF16Codec(UTF16Codec::UTF_16BE));
+            args[1] = Object::makeTranscoder(UTF16Codec::getCodec(UTF16Codec::UTF_16BE));
         } else {
             callAssertionViolationAfter(theVM, procedureName, "endianness should be little or big", L1(argv[1]));
             return Object::Undef;
         }
         return stringTobytevectorEx(theVM, 2, args);
     } else {
-        args[1] = Object::makeTranscoder(new UTF16Codec(UTF16Codec::UTF_16BE));
+        args[1] = Object::makeTranscoder(UTF16Codec::getCodec(UTF16Codec::UTF_16BE));
         return stringTobytevectorEx(theVM, 2, args);
     }
 }
@@ -204,16 +204,16 @@ Object scheme::stringToutf32Ex(VM* theVM, int argc, const Object* argv)
     if (argc == 2) {
         argumentCheckSymbol(1, endianness);
         if (endianness == Symbol::LITTLE) {
-            args[1] = Object::makeTranscoder(new UTF32Codec(UTF32Codec::UTF_32LE));
+            args[1] = Object::makeTranscoder(UTF32Codec::getCodec(UTF32Codec::UTF_32LE));
         } else if (endianness == Symbol::BIG) {
-            args[1] = Object::makeTranscoder(new UTF32Codec(UTF32Codec::UTF_32BE));
+            args[1] = Object::makeTranscoder(UTF32Codec::getCodec(UTF32Codec::UTF_32BE));
         } else {
             callAssertionViolationAfter(theVM, procedureName, "endianness should be little or big", L1(argv[1]));
             return Object::Undef;
         }
         return stringTobytevectorEx(theVM, 2, args);
     } else {
-        args[1] = Object::makeTranscoder(new UTF32Codec(UTF32Codec::UTF_32BE));
+        args[1] = Object::makeTranscoder(UTF32Codec::getCodec(UTF32Codec::UTF_32BE));
         return stringTobytevectorEx(theVM, 2, args);
     }
 }
