@@ -1,3 +1,8 @@
+2009-02-07  kokosabu  <kokosabu@gmail.com>
+
+        * PortProcedures.cpp : Added transcoder-codec, transcoder-eol-style,
+                                     transcoder-error-handling-mode.
+
 2009-02-06  higepon  <higepon@users.sourceforge.jp>
 
         * Use Derick Eddington's SRFIs.
